# fmripost-aroma

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  .readthedocs.yml  .zenodo.json  CHANGES.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile_devel  Makefile  NOTICE  README.md  README.rst  REFERENCES.md  env.yml  long_description.rst  pyproject.toml  tox.ini
.circleci/: config.yml  get_data.py
.github/: config.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: contrib.yml  docker.yml  pre-release.yml  stable.yml  test.yml
.maint/ci/: build_archive.sh  check.sh  create_venv.sh  env.sh  install.sh  install_extras.sh
docs/: api.rst  conf.py  faq.rst  index.rst  installation.rst  license.rst  links.rst  outputs.rst  spaces.rst  usage.rst  workflows.rst
docs/sphinxext/: github_link.py
scripts/: fetch_templates.py
src/fmripost_aroma/: __init__.py  __main__.py  config.py
src/fmripost_aroma/cli/: __init__.py  parser.py  run.py  version.py  workflow.py
src/fmripost_aroma/data/: NOTICE  __init__.py  boilerplate.bib  io_spec.json  reports-spec-anat.yml  reports-spec-func.yml  reports-spec.yml
src/fmripost_aroma/data/tests/: config.toml
src/fmripost_aroma/interfaces/: __init__.py  aroma.py  bids.py  confounds.py  misc.py  nilearn.py  reportlets.py  resampler.py
src/fmripost_aroma/reports/: core.py
src/fmripost_aroma/tests/: conftest.py  run_local_tests.py  test_base.py  test_cli.py  test_utils_bids.py  tests.py  utils.py
src/fmripost_aroma/tests/data/: README  dataset_description.json  skeleton_longitudinal_01.yml  skeleton_longitudinal_02.yml  test_ds005115_resampling_and_raw_outputs.txt
src/fmripost_aroma/utils/: aroma.py  bids.py  features.py  plotting.py  resampler.py  utils.py
src/fmripost_aroma/workflows/: __init__.py  aroma.py  base.py  confounds.py  outputs.py  resample.py  resampling.py
src/fmripost_aroma/workflows/tests/: __init__.py  test_base.py
src/fmripost_template/: __main__.py  _version.pyi  config.py
src/fmripost_template/cli/: __init__.py  parser.py  run.py  version.py  workflow.py
src/fmripost_template/data/: NOTICE  __init__.py  boilerplate.bib  reports-spec.yml
src/fmripost_template/interfaces/: __init__.py  bids.py
src/fmripost_template/reports/: __init__.py  core.py
src/fmripost_template/tests/: conftest.py  run_local_tests.py  test_base.py  test_cli.py  tests.py  utils.py
src/fmripost_template/utils/: __init__.py  bids.py  utils.py
src/fmripost_template/workflows/: __init__.py  base.py
tests/: __init__.py
tests/data/skeletons/: skeleton_crosssectional_01.yml  skeleton_longitudinal_01.yml  skeleton_longitudinal_02.yml  skeleton_longitudinal_03.yml
